--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 venv/
-# simple_IO/model/ljp/LJPBertExercise/checkpoint_9.pkl
-# simple_IO/bert/pytorch_model.bin
+simple_IO/model/ljp/LJPBertExercise/checkpoint_9.pkl
+simple_IO/bert/pytorch_model.bin
 **/__pycache__/
