--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 venv/
 simple_IO/model/ljp/LJPBertExercise/new_checkpoint_2.pkl
 simple_IO/bert/pytorch_model.bin
+Legal_Judgment_Prediction/results/Bert
 **/*.pkl
 **/__pycache__/
