--- a/legal_judgment_prediction/config.ini
+++ b/legal_judgment_prediction/config.ini
@@ -17,35 +17,35 @@ reader_num = 0
 [data]
 train_dataset_type = JsonFromFiles
 train_formatter_type = BertLJP
-train_file_path = data
+train_file_path = legal_judgment_prediction/data
 train_file_name = train_50_processed.json
 
 valid_dataset_type = JsonFromFiles
 valid_formatter_type = BertLJP
-valid_file_path = data
+valid_file_path = legal_judgment_prediction/data
 valid_file_name = valid_50_processed.json
 
 test_dataset_type = JsonFromFiles
 test_formatter_type =BertLJP
-test_file_path = data
+test_file_path = legal_judgment_prediction/data
 test_file_name = test_50_processed.json
 
-charge_path = data/charge_50.txt
-article_path = data/article_50.txt
-article_source_path = data/article_source_50.txt
+charge_path = legal_judgment_prediction/data/charge_50.txt
+article_path = legal_judgment_prediction/data/article_50.txt
+article_source_path = legal_judgment_prediction/data/article_source_50.txt
 
 max_seq_length = 512
 reduce = False
 
 [model]
 model_name = LJPBert
-bert_path = bert
+bert_path = legal_judgment_prediction/bert
 hidden_size = 768
 
 [output]
-model_path = results
+model_path = legal_judgment_prediction/results
 model_name = Bert
 output_time = 2000
-tensorboard_path = tensorboard
+tensorboard_path = legal_judgment_prediction/tensorboard
 output_function = LJP
 test_time = 1
