Fix all known serve isses

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,6 @@ simple_IO/bert/pytorch_model.bin
 legal_judgment_prediction/bert/pytorch_model.bin
 legal_judgment_prediction/results/Bert
 legal_judgment_prediction/data/*.json
+ngrok
 **/*.pkl
 **/__pycache__/
