line bot todaynews & law scraper funtion

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 venv/
 
 legal_judgment_prediction/bert/pytorch_model.bin
-legal_judgment_prediction/results/Bert
+# legal_judgment_prediction/results/Bert
 legal_judgment_prediction/data/*.json
 
 ngrok
