Fix wrong attribute name issue

--- a/config.ini
+++ b/config.ini
@@ -57,8 +57,8 @@ test_time = 1
 web_server_IP = 0.0.0.0
 web_server_port = 5000
 
-server_socket_IP = 172.17.0.3
-server_socker_port = 8000
+server_socket_IP = 172.17.0.4
+server_socket_port = 8000
 
 LINE_CHANNEL_ACCESS_TOKEN = ***REMOVED***
 CHANNEL_SECRET = ***REMOVED***
