Fix chinese article_source issue and the fact preprocessing & set socket timeout

--- a/config.ini
+++ b/config.ini
@@ -28,7 +28,7 @@ valid_file_name = valid_50_processed.json
 test_dataset_type = JsonFromFiles
 test_formatter_type =BertLJP
 test_file_path = legal_judgment_prediction/data
-test_file_name = test_50_processed.json
+test_file_name = test_50_processed_2.json
 
 charge_path = legal_judgment_prediction/data/charge_50.txt
 article_path = legal_judgment_prediction/data/article_50.txt
@@ -54,7 +54,7 @@ output_time = 2000
 test_time = 1
 
 [server]
-web_server_IP = 0.0.0.0
+web_server_IP = 127.0.0.1
 web_server_port = 5000
 
 server_socket_IP = 172.17.0.4
