Restore the commented out code

--- a/config.ini
+++ b/config.ini
@@ -28,7 +28,7 @@ valid_file_name = valid_50_processed.json
 test_dataset_type = JsonFromFiles
 test_formatter_type =BertLJP
 test_file_path = legal_judgment_prediction/data
-test_file_name = test_50_processed_2.json
+test_file_name = test_50_processed.json
 
 charge_path = legal_judgment_prediction/data/charge_50.txt
 article_path = legal_judgment_prediction/data/article_50.txt
