Update README.md and .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
 venv/
 
-legal_judgment_prediction/bert/pytorch_model.bin
-# legal_judgment_prediction/results/Bert
 legal_judgment_prediction/data/*.json
+legal_judgment_prediction/bert/pytorch_model.bin
+legal_judgment_prediction/results/Bert/*.pkl
 
-ngrok
+# ngrok
 
-**/*.pkl
 **/__pycache__/
