--- a/bert_config.ini
+++ b/bert_config.ini
@@ -1,18 +1,18 @@
 [train]
 epoch = 4
-batch_size = 8
+batch_size = 6
 shuffle = True
-reader_num = 0
+num_workers = 0
 optimizer = bert_adam
 learning_rate = 1e-5
+weight_decay = 0
 step_size = 1
 lr_multiplier = 1
-weight_decay = 0
 
 [eval]
 batch_size = 6
 shuffle = False
-reader_num = 0
+num_workers = 0
 
 [data]
 train_dataset_type = JsonFromFiles
@@ -26,7 +26,7 @@ valid_file_path = legal_judgment_prediction/data
 valid_file_name = valid_50_processed.json
 
 test_dataset_type = JsonFromFiles
-test_formatter_type =BertLJP
+test_formatter_type = BertLJP
 test_file_path = legal_judgment_prediction/data
 test_file_name = test_50_processed.json
 
@@ -41,16 +41,16 @@ reduce = False
 model_name = LJPBert
 bert_path = legal_judgment_prediction/bert
 hidden_size = 768
+checkpoint_path = legal_judgment_prediction/bert/checkpoint_4.pkl
 
 [output]
 model_path = legal_judgment_prediction/results
-model_name = Bert
+model_name = bert
 
-output_function = LJP
+output_function = bert
+output_value = 
 
-tensorboard_path = legal_judgment_prediction/tensorboard
-
-output_time = 2000
+output_time = 10
 test_time = 1
 
 [server]
