Fix the known bugs and check  all functions

--- a/bart_config.ini
+++ b/bart_config.ini
@@ -36,13 +36,13 @@ reduce = False
 [model]
 model_name = LJPBart
 bart_path = legal_judgment_prediction/bart
-checkpoint_path = legal_judgment_prediction/bart/checkpoint_4.pkl
+checkpoint_path = legal_judgment_prediction/results/bart/checkpoint_0.pkl
 
 [output]
 model_path = legal_judgment_prediction/results
 model_name = bart
 
-output_function = null
+output_function = bart
 
 output_time = 2000
 test_time = 1
