--- a/bart_config.ini
+++ b/bart_config.ini
@@ -1,3 +1,6 @@
+[log]
+name = bart.log
+
 [train]
 epoch = 5
 batch_size = 6
@@ -36,7 +39,7 @@ reduce = False
 [model]
 model_name = LJPBart
 bart_path = legal_judgment_prediction/bart
-checkpoint_path = legal_judgment_prediction/results/bart/checkpoint_2.pkl
+checkpoint_path = legal_judgment_prediction/results/bart/checkpoint_4.pkl
 
 [output]
 model_path = legal_judgment_prediction/results
