Use adding special tokens method

--- a/bart_config.ini
+++ b/bart_config.ini
@@ -35,6 +35,7 @@ test_file_name = test_50_processed.json
 
 max_seq_length = 512
 reduce = False
+add_special_tokens = True
 
 [model]
 model_name = LJPBart
@@ -43,7 +44,7 @@ checkpoint_path = legal_judgment_prediction/results/bart/checkpoint_4.pkl
 
 [output]
 model_path = legal_judgment_prediction/results
-model_name = bart
+model_name = bart_ast
 
 output_function = bart
 
