Adjust adding special tokens code

--- a/bart_config.ini
+++ b/bart_config.ini
@@ -44,7 +44,7 @@ checkpoint_path = legal_judgment_prediction/results/bart_ast_2/checkpoint_999.pk
 
 [output]
 model_path = legal_judgment_prediction/results
-model_name = bart_ast
+model_name = bart_ast_2
 
 output_function = bart
 
