Finish the part of updating data analysis

--- a/multi_labels_precedent_analysis_config.ini
+++ b/multi_labels_precedent_analysis_config.ini
@@ -1,5 +1,5 @@
 [log]
-name = analyze_multi_labels.log
+name = multi_labels_data_analysis.log
 
 [data]
 name = Multi labels precedents of Taiwan Criminal Law
@@ -8,3 +8,4 @@ folder_path = legal_judgment_prediction/data/precedents/multi_labels
 [result]
 general_analysis_file_path = legal_judgment_prediction/results/precedent_analysis/multi_labels/general_analysis.txt
 files_analysis_file_path = legal_judgment_prediction/results/precedent_analysis/multi_labels/files_analysis.txt
+parameters_file_path = legal_judgment_prediction/results/precedent_analysis/multi_labels/parameters.pkl
