--- a/one_label_precedent_analysis_config.ini
+++ b/one_label_precedent_analysis_config.ini
@@ -1,5 +1,5 @@
 [log]
-name = analyze_one_label.log
+name = one_label_data_analysis.log
 
 [data]
 name = One label precedents of Taiwan Criminal Law
@@ -8,3 +8,4 @@ folder_path = legal_judgment_prediction/data/precedents/one_label
 [result]
 general_analysis_file_path = legal_judgment_prediction/results/precedent_analysis/one_label/general_analysis.txt
 files_analysis_file_path = legal_judgment_prediction/results/precedent_analysis/one_label/files_analysis.txt
+parameters_file_path = legal_judgment_prediction/results/precedent_analysis/one_label/parameters.pkl
