--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,22 @@
 venv/
 
-legal_judgment_prediction/data/*.txt
 legal_judgment_prediction/data/*.json
+legal_judgment_prediction/data/*.txt
 legal_judgment_prediction/data/precedents/multi_labels/*.json
 legal_judgment_prediction/data/precedents/one_label/*.json
 
 legal_judgment_prediction/bart/pytorch_model.bin
 legal_judgment_prediction/bert/pytorch_model.bin
+
 legal_judgment_prediction/results/bart/*.pkl
 legal_judgment_prediction/results/bert/*.pkl
+legal_judgment_prediction/results/precedent_analysis/one_label/*.pkl
+legal_judgment_prediction/results/precedent_analysis/one_label/*.txt
+legal_judgment_prediction/results/precedent_analysis/multi_labels/*.pkl
+legal_judgment_prediction/results/precedent_analysis/multi_labels/*.txt
+legal_judgment_prediction/results/tvt_data/multi_labels/all/*json
+legal_judgment_prediction/results/tvt_data/one_label/all/*json
+legal_judgment_prediction/results/tvt_data/one_label/top_50_article/*json
 
 **/__pycache__/
 
