--- a/tvt_data_generation_config.ini
+++ b/tvt_data_generation_config.ini
@@ -1,13 +1,15 @@
 [log]
 name = tvt_data_generation.log
 
+[one_label]
+parameters = legal_judgment_prediction/results/precedent_analysis/one_label/parameters.pkl
+data_path = legal_judgment_prediction/data/precedents/one_label
+
+[multi_labels]
+parameters = legal_judgment_prediction/results/precedent_analysis/multi_labels/parameters.pkl
+data_path = legal_judgment_prediction/data/precedents/multi_labels
+
 [common]
-one_label_parameters = legal_judgment_prediction/results/precedent_analysis/one_label/parameters.pkl
-one_label_path = legal_judgment_prediction/data/precedents/one_label
-
-multi_labels_parameters = legal_judgment_prediction/results/precedent_analysis/multi_labels/parameters.pkl
-multi_labels_path = legal_judgment_prediction/data/precedents/multi_labels
-
 output_path = legal_judgment_prediction/results/tvt_data
 
 train_size = 0.8
