Update BART and BERT config file

--- a/bart_config.ini
+++ b/bart_config.ini
@@ -20,18 +20,18 @@ num_workers = 0
 [data]
 train_dataset_type = JsonFromFiles
 train_formatter_type = BartLJP
-train_file_path = legal_judgment_prediction/data
-train_file_name = train_50_processed.json
+train_file_path = legal_judgment_prediction/results/tvt_data/one_label/top_50_article
+train_file_name = train.json
 
 valid_dataset_type = JsonFromFiles
 valid_formatter_type = BartLJP
-valid_file_path = legal_judgment_prediction/data
-valid_file_name = valid_50_processed.json
+valid_file_path = legal_judgment_prediction/results/tvt_data/one_label/top_50_article
+valid_file_name = valid.json
 
 test_dataset_type = JsonFromFiles
 test_formatter_type = BartLJP
-test_file_path = legal_judgment_prediction/data
-test_file_name = test_50_processed.json
+test_file_path = legal_judgment_prediction/results/tvt_data/one_label/top_50_article
+test_file_name = test.json
 
 max_seq_length = 512
 reduce = False
