--- a/bert_config.ini
+++ b/bert_config.ini
@@ -2,8 +2,8 @@
 name = bert.log
 
 [train]
-epoch = 4
-batch_size = 6
+epoch = 5
+batch_size = 8
 shuffle = True
 num_workers = 0
 optimizer = bert_adam
@@ -13,29 +13,29 @@ step_size = 1
 lr_multiplier = 1
 
 [eval]
-batch_size = 6
+batch_size = 8
 shuffle = False
 num_workers = 0
 
 [data]
 train_dataset_type = JsonFromFiles
 train_formatter_type = BertLJP
-train_file_path = legal_judgment_prediction/data
-train_file_name = train_50_processed.json
+train_file_path = legal_judgment_prediction/results/tvt_data/one_label/top_50_article
+train_file_name = train.json
 
 valid_dataset_type = JsonFromFiles
 valid_formatter_type = BertLJP
-valid_file_path = legal_judgment_prediction/data
-valid_file_name = valid_50_processed.json
+valid_file_path = legal_judgment_prediction/results/tvt_data/one_label/top_50_article
+valid_file_name = valid.json
 
 test_dataset_type = JsonFromFiles
 test_formatter_type = BertLJP
-test_file_path = legal_judgment_prediction/data
-test_file_name = test_50_processed.json
+test_file_path = legal_judgment_prediction/results/tvt_data/one_label/top_50_article
+test_file_name = test.json
 
-charge_path = legal_judgment_prediction/data/charge_50.txt
-article_path = legal_judgment_prediction/data/article_50.txt
-article_source_path = legal_judgment_prediction/data/article_source_50.txt
+charge_path = legal_judgment_prediction/results/tvt_data/one_label/top_50_article/charge.txt
+article_path = legal_judgment_prediction/results/tvt_data/one_label/top_50_article/article.txt
+article_source_path = legal_judgment_prediction/results/tvt_data/one_label/top_50_article/article_source.txt
 
 max_seq_length = 512
 reduce = False
