Adjust the file architecture of project

--- a/configs/bart/one_label/top_50_article/config.ini
+++ b/configs/bart/one_label/top_50_article/config.ini
@@ -2,8 +2,7 @@
 name = bart.log
 
 [train]
-epoch = 5
-batch_size = 8
+epoch = 3
 shuffle = True
 num_workers = 0
 optimizer = adam
@@ -13,24 +12,26 @@ step_size = 1
 lr_multiplier = 1
 
 [eval]
-batch_size = 8
 shuffle = False
 num_workers = 0
 
 [data]
+label = one_label
+range = top_50_article
+
 train_dataset_type = JsonFromFiles
 train_formatter_type = BartLJP
-train_file_path = legal_judgment_prediction/results/tvt_data/one_label/top_50_article
+train_file_path = legal_judgment_prediction/results/tvt_dataset/one_label/top_50_article
 train_file_name = train.json
 
 valid_dataset_type = JsonFromFiles
 valid_formatter_type = BartLJP
-valid_file_path = legal_judgment_prediction/results/tvt_data/one_label/top_50_article
+valid_file_path = legal_judgment_prediction/results/tvt_dataset/one_label/top_50_article
 valid_file_name = valid.json
 
 test_dataset_type = JsonFromFiles
 test_formatter_type = BartLJP
-test_file_path = legal_judgment_prediction/results/tvt_data/one_label/top_50_article
+test_file_path = legal_judgment_prediction/results/tvt_dataset/one_label/top_50_article
 test_file_name = test.json
 
 max_seq_length = 512
@@ -40,11 +41,11 @@ add_special_tokens = True
 [model]
 model_name = LJPBart
 bart_path = legal_judgment_prediction/bart
-checkpoint_path = legal_judgment_prediction/results/bart/checkpoint_4.pkl
+checkpoint_path = legal_judgment_prediction/results/bart/one_label/top_50_article/checkpoint_0.pkl
 
 [output]
 model_path = legal_judgment_prediction/results
-model_name = bart_ast_2
+model_name = bart
 
 output_function = bart
 
@@ -55,9 +56,6 @@ test_time = 1
 web_server_IP = 127.0.0.1
 web_server_port = 5000
 
-server_socket_IP = 172.17.0.4
 server_socket_port = 8000
 
-LINE_CHANNEL_ACCESS_TOKEN = ***REMOVED***
-CHANNEL_SECRET = ***REMOVED***
 rich_menu_ID = richmenu-1c5c154f17b8ffd07484405776048588
