--- a/configs/bert/one_label/top_50_article/config.ini
+++ b/configs/bert/one_label/top_50_article/config.ini
@@ -2,8 +2,7 @@
 name = bert.log
 
 [train]
-epoch = 5
-batch_size = 8
+epoch = 3
 shuffle = True
 num_workers = 0
 optimizer = bert_adam
@@ -13,29 +12,31 @@ step_size = 1
 lr_multiplier = 1
 
 [eval]
-batch_size = 8
 shuffle = False
 num_workers = 0
 
 [data]
+label = one_label
+range = top_50_article
+
 train_dataset_type = JsonFromFiles
 train_formatter_type = BertLJP
-train_file_path = legal_judgment_prediction/results/tvt_data/one_label/top_50_article
+train_file_path = legal_judgment_prediction/results/tvt_dataset/one_label/top_50_article
 train_file_name = train.json
 
 valid_dataset_type = JsonFromFiles
 valid_formatter_type = BertLJP
-valid_file_path = legal_judgment_prediction/results/tvt_data/one_label/top_50_article
+valid_file_path = legal_judgment_prediction/results/tvt_dataset/one_label/top_50_article
 valid_file_name = valid.json
 
 test_dataset_type = JsonFromFiles
 test_formatter_type = BertLJP
-test_file_path = legal_judgment_prediction/results/tvt_data/one_label/top_50_article
+test_file_path = legal_judgment_prediction/results/tvt_dataset/one_label/top_50_article
 test_file_name = test.json
 
-charge_path = legal_judgment_prediction/results/tvt_data/one_label/top_50_article/charge.txt
-article_path = legal_judgment_prediction/results/tvt_data/one_label/top_50_article/article.txt
-article_source_path = legal_judgment_prediction/results/tvt_data/one_label/top_50_article/article_source.txt
+accusations_path = legal_judgment_prediction/results/tvt_dataset/one_label/top_50_article/accusations.txt
+articles_path = legal_judgment_prediction/results/tvt_dataset/one_label/top_50_article/articles.txt
+article_sources_path = legal_judgment_prediction/results/tvt_dataset/one_label/top_50_article/article_sources.txt
 
 max_seq_length = 512
 reduce = False
@@ -44,7 +45,7 @@ reduce = False
 model_name = LJPBert
 bert_path = legal_judgment_prediction/bert
 hidden_size = 768
-checkpoint_path = legal_judgment_prediction/results/bert/checkpoint_0.pkl
+checkpoint_path = legal_judgment_prediction/results/bert/one_label/top_50_article/checkpoint_3.pkl
 
 [output]
 model_path = legal_judgment_prediction/results
@@ -60,9 +61,6 @@ test_time = 1
 web_server_IP = 127.0.0.1
 web_server_port = 5000
 
-server_socket_IP = 172.17.0.4
 server_socket_port = 8000
 
-LINE_CHANNEL_ACCESS_TOKEN = ***REMOVED***
-CHANNEL_SECRET = ***REMOVED***
 rich_menu_ID = richmenu-1c5c154f17b8ffd07484405776048588
