--- a/configs/generate/innocence/tvt_data_generation_config.ini
+++ b/configs/generate/innocence/tvt_data_generation_config.ini
@@ -1,5 +1,5 @@
 [log]
-name = tvt_data_generation.log
+name = one_label_tvt_data_generation.log
 
 [one_label]
 parameters = legal_judgment_prediction/results/precedent_analysis/one_label/parameters.pkl
