--- a/configs/bart/one_label/top_50_article/config.ini
+++ b/configs/bart/one_label/top_50_article/config.ini
@@ -2,50 +2,40 @@
 name = bart.log
 
 [train]
-epoch = 3
+epoch = 6
 shuffle = True
-num_workers = 0
+num_workers = 4
 optimizer = adam
 learning_rate = 1e-5
-weight_decay = 0
-step_size = 1
+milestones = 2,4
 lr_multiplier = 1
 
 [eval]
 shuffle = False
-num_workers = 0
+num_workers = 4
 
 [data]
-label = one_label
-range = top_50_article
+train_dataset_name = JsonFromFiles
+train_formatter_name = BartFormatter
+train_file_path = legal_judgment_prediction/results/tvt_dataset/one_label/top_50_article/train.json
 
-train_dataset_type = JsonFromFiles
-train_formatter_type = BartFormatter
-train_file_path = legal_judgment_prediction/results/tvt_dataset/one_label/top_50_article
-train_file_name = train.json
+valid_dataset_name = JsonFromFiles
+valid_formatter_name = BartFormatter
+valid_file_path = legal_judgment_prediction/results/tvt_dataset/one_label/top_50_article/valid.json
 
-valid_dataset_type = JsonFromFiles
-valid_formatter_type = BartFormatter
-valid_file_path = legal_judgment_prediction/results/tvt_dataset/one_label/top_50_article
-valid_file_name = valid.json
+test_dataset_name = JsonFromFiles
+test_formatter_name = BartFormatter
+test_file_path = legal_judgment_prediction/results/tvt_dataset/one_label/top_50_article/test.json
 
-test_dataset_type = JsonFromFiles
-test_formatter_type = BartFormatter
-test_file_path = legal_judgment_prediction/results/tvt_dataset/one_label/top_50_article
-test_file_name = test.json
-
-max_seq_length = 512
-reduce = False
-add_special_tokens = True
+add_tokens_at_beginning = True
+max_len = 512
 
 [model]
 model_name = LJPBart
-bart_path = models/bart-base-chinese
-checkpoint_path = legal_judgment_prediction/results/bart/one_label/top_50_article/checkpoint_0.pkl
+model_path = models/bart-base-chinese
 
 [output]
-model_path = legal_judgment_prediction/results
-model_name = bart
+output_path = legal_judgment_prediction/results/legal_judgment_prediction/bart/one_label/top_50_article
 
 output_function = bart
 
@@ -57,5 +47,3 @@ web_server_IP = 127.0.0.1
 web_server_port = 5000
 
 server_socket_port = 8000
-
-rich_menu_ID = richmenu-1c5c154f17b8ffd07484405776048588
