Update config files

--- a/configs/generate/for_legal_judgment_prediction_model/bart/combination/config.ini
+++ b/configs/generate/for_legal_judgment_prediction_model/bart/combination/config.ini
@@ -3,11 +3,11 @@ name = tvt_dataset_generation.log
 
 [common]
 task = legal_judgment_prediction
-summarization = after
+summarization = bart
 type = combination
 
-data_path = results/tvt_dataset/for_legal_judgment_prediction_model/before_summarizing/combination
-output_path = results/tvt_dataset/for_legal_judgment_prediction_model/after_summarizing/combination
+data_path = results/tvt_dataset/for_legal_judgment_prediction_model/none/combination
+output_path = results/tvt_dataset/for_legal_judgment_prediction_model/bart/combination
 
 train_size = 0.8
 valid_size = 0.5
