--- a/configs/generate/for_legal_judgment_prediction_model/bart/multi_labels/config.ini
+++ b/configs/generate/for_legal_judgment_prediction_model/bart/multi_labels/config.ini
@@ -3,11 +3,11 @@ name = tvt_dataset_generation.log
 
 [common]
 task = legal_judgment_prediction
-summarization = after
+summarization = bart
 type = multi_labels
 
-data_path = results/tvt_dataset/for_legal_judgment_prediction_model/before_summarizing/multi_labels
-output_path = results/tvt_dataset/for_legal_judgment_prediction_model/after_summarizing/multi_labels
+data_path = results/tvt_dataset/for_legal_judgment_prediction_model/none/multi_labels
+output_path = results/tvt_dataset/for_legal_judgment_prediction_model/bart/multi_labels
 
 train_size = 0.8
 valid_size = 0.5
