--- a/configs/generate/for_legal_judgment_prediction_model/none/combination/config.ini
+++ b/configs/generate/for_legal_judgment_prediction_model/none/combination/config.ini
@@ -3,11 +3,11 @@ name = tvt_dataset_generation.log
 
 [common]
 task = legal_judgment_prediction
-summarization = before
+summarization = none
 type = combination
 
 data_path = data/taiwan_indictments/combination
-output_path = results/tvt_dataset/for_legal_judgment_prediction_model/before_summarizing/combination
+output_path = results/tvt_dataset/for_legal_judgment_prediction_model/none/combination
 
 article_lowerbound = 50
 
