--- a/configs/generate/for_legal_judgment_prediction_model/none/multi_labels/config.ini
+++ b/configs/generate/for_legal_judgment_prediction_model/none/multi_labels/config.ini
@@ -3,11 +3,11 @@ name = tvt_dataset_generation.log
 
 [common]
 task = legal_judgment_prediction
-summarization = before
+summarization = none
 type = multi_labels
 
 data_path = data/taiwan_indictments/multi_labels
-output_path = results/tvt_dataset/for_legal_judgment_prediction_model/before_summarizing/multi_labels
+output_path = results/tvt_dataset/for_legal_judgment_prediction_model/none/multi_labels
 
 article_lowerbound = 50
 
