--- a/configs/generate/for_legal_judgment_prediction_model/none/one_label/config.ini
+++ b/configs/generate/for_legal_judgment_prediction_model/none/one_label/config.ini
@@ -3,11 +3,11 @@ name = tvt_dataset_generation.log
 
 [common]
 task = legal_judgment_prediction
-summarization = before
+summarization = none
 type = one_label
 
 data_path = data/taiwan_indictments/one_label
-output_path = results/tvt_dataset/for_legal_judgment_prediction_model/before_summarizing/one_label
+output_path = results/tvt_dataset/for_legal_judgment_prediction_model/none/one_label
 
 article_lowerbound = 50
 
