Update config files

--- a/configs/generate/for_legal_judgment_prediction_model/bart/one_label/config.ini
+++ b/configs/generate/for_legal_judgment_prediction_model/bart/one_label/config.ini
@@ -18,3 +18,7 @@ random_seed = 48763
 [model]
 model_name = LJSBart
 bart_path = models/bart-base-chinese
+
+[data]
+add_special_tokens = True
+max_seq_length = 512
